# wishlister

./: .flake8  pyproject.toml  wishlister.py
.github/workflows/: run-wishlister.yml
