[tool.poetry]
name = "wishlists"
version = "0.1.0"
description = ""
authors = ["Sam Morley-Short <sam.morleyshort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
