[tool.poetry]
name = "wishlists"
version = "0.1.0"
description = ""
authors = ["Sam Morley-Short <sam.morleyshort@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32"
beautifulsoup4 = "^4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

